# rcc

./: .gitignore  Cargo.toml  LICENSE.TXT  README.md  SECURITY.md  rustfmt.toml  test.c  test_compiler.ps1
.github/instructions/: learnrust.instructions.md
compiler/: Cargo.toml
compiler/ADT/src/: floating.rs  integral.rs  lib.rs  uom.rs
compiler/ADT/src/uom/: alignment.rs  size.rs
compiler/AST/: Cargo.toml
compiler/AST/src/: constant.rs  context.rs  environment.rs  lib.rs  session.rs  target_info.rs
compiler/AST/src/blueprints/: rawdecl.rs  rawexpr.rs  rawstmt.rs
compiler/AST/src/types/: cast_type.rs  compatible.rs  fmt.rs  meta.rs  primitives.rs  promotion.rs  qualified_types.rs  type_info.rs  unqualified_type.rs
compiler/Driver/: Cargo.toml
compiler/Driver/src/: instance.rs  lib.rs  main.rs
compiler/IR/: Cargo.toml
compiler/IR/src/: builder.rs  constant.rs  context.rs  data_layout.rs  datalayout.rs  emitable.rs  emitter.rs  fmt.rs  global.rs  instruction.rs  lib.rs  module.rs  types.rs  value.rs
compiler/IR/src/instruction/: binary.rs  cast.rs  cmp.rs  memory.rs  misc.rs  terminator.rs
compiler/Lex/: Cargo.toml
compiler/Lex/src/: lexer.rs
compiler/Memory/: Cargo.toml
compiler/Memory/src/: arena.rs  bumper.rs  lib.rs  mono.rs  redeclarable.rs  registry.rs
compiler/Parse/: Cargo.toml
compiler/Parse/src/: declaration.rs  parser.rs
compiler/Parse/src/parse/: declaration.rs
compiler/Sema/: Cargo.toml
compiler/Sema/src/: conversion.rs  declaration.rs  declref.rs  expression.rs  folder.rs  folding.rs  initialization.rs  lib.rs  semantics.rs  statement.rs
compiler/Serialize/: Cargo.toml
compiler/Serialize/src/: colored.rs  dump.rs  dumpable.rs  dumper.rs  lib.rs  out.rs  printable.rs  printer.rs  render.rs
compiler/Shared/: Cargo.toml
compiler/Shared/src/: arena.rs  bumper.rs  constant.rs  diagnosis.rs  keyword.rs  langopts.rs  lib.rs  number.rs  operator.rs  redeclarable.rs  source_info.rs  storage.rs  token.rs  triple.rs
compiler/src/: main.rs
core/: Cargo.toml
core/ADT/: Cargo.toml
core/ADT/src/: lib.rs
core/AST/: Cargo.toml
core/AST/src/: blueprints.rs  context.rs  dumpable.rs  dumper.rs  environment.rs  lib.rs  session.rs  types.rs
core/AST/src/blueprints/: rawexpr.rs
core/AST/src/types/: compatible.rs  fmt.rs  meta.rs  unqualified_type.rs
core/IR/: Cargo.toml
core/IR/src/: context.rs  emitable.rs  emitter.rs  fmt.rs  instruction.rs  lib.rs  module.rs  printer.rs  types.rs
core/Lex/: Cargo.toml
core/Lex/src/: lexer.rs
core/Parse/: Cargo.toml
core/Parse/src/: lib.rs  parse.rs
core/Sema/: Cargo.toml
core/Sema/src/: dump.rs  folding.rs  lib.rs  semantics.rs  statement.rs
core/Serialize/: Cargo.toml
core/Serialize/src/: colored.rs  lib.rs
core/shared/: Cargo.toml
core/shared/src/: diagnosis.rs  lib.rs
core/src/: analyzer.rs  blueprints.rs  codegen.rs  common.rs  diagnosis.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  sema.rs  session.rs  storage.rs  types.rs
core/src/analyzer/: analyzer.rs  conversion.rs  declaration.rs  dump.rs  expression.rs  folding.rs  (+2 more)
src/: common.rs  lib.rs  main.rs  utils.rs
src/analyzer/: analyzer.rs  conversion.rs  declaration.rs  expression.rs  mod.rs  statement.rs
src/common/: environment.rs  error.rs  keyword.rs  mod.rs  operator.rs  rawdecl.rs  rawexpr.rs  rawstmt.rs  storage.rs  token.rs  types.rs
src/lexer/: lexer.rs
src/parser/: ast.rs  declaration.rs  expression.rs  mod.rs  parser.rs  statement.rs  types.rs
src/utils/: debugging.rs  mod.rs
tests/: .clangd  .gitignore  arrs.c  global_decls.c  global_func_decl.c  global_var_decl_errs.c  global_var_decls.c  implicit_return.c  implicit_return2.c  implicit_return3.c  init_declarator_errs.c  init_declarators.c  initialization.c  initialization_errs.c  number_errs.c  numbers.c  sysY_check.c  test.c  test4.c
utils/: Cargo.toml
utils/src/: evaluation.rs  lib.rs  macros.rs  num_traits.rs  opaque.rs
(+71 files in other folders)
