[package]
name = "lilac"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
homepage = "https://github.com/LiAuTraver/lilac"
readme = "README.md"


[dependencies]
once_cell = "1.21.3"
paste = "1.0.15"
# keep it 0.25; would cause serialization issue w.r.t. `}` on later versions
strum_macros = "0.25.3"
strum = "0.27.2"
bitflags = "2.10.0"
