[package]
name = "rcc"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]
license-file = "LICENSE"
homepage = "https://github.com/LiAuTraver/rcc"
readme = "README.md"

[dependencies]
rcc-utils = { path = "../utils" }
rcc-shared = { path = "../core/shared" }
rcc-ast = { path = "../core/AST" }
rcc-lex = { path = "../core/Lex" }
rcc-parse = { path = "../core/Parse" }
rcc-sema = { path = "../core/Sema" }
rcc-ir = { path = "../core/IR" }
