[package]
name = "rcc-parse"
version = "0.1.0"
edition = "2024"
authors = ["LiAuTraver"]


[dependencies]
rcc-utils = { path = "../../utils" }
rcc-shared = { path = "../Shared" }
rcc-adt = { path = "../ADT" }
rcc-ast = { path = "../AST" }

termcolor = "1.4.1"
strum_macros = "0.25.3"
strum = "0.27.2"
bitflags = "2.10.0"
paste = "1.0.15"
bimap = "0.6.3"
bumpalo = { version = "3.19.1", features = ["collections"] }
